--- a/contactbook-data/src/main/resources/hibernate.properties
+++ b/contactbook-data/src/main/resources/hibernate.properties
@@ -1,6 +1,7 @@
 hibernate.connection.driver_class=org.h2.Driver
 hibernate.connection.url=jdbc:h2:file:./data/src/main/resources/contactbook
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-#hibernate.hbm2ddl.auto=create
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create
+#hibernate.hbm2ddl.auto=update
+#hibernate.hbm2ddl.auto=delete
 hibernate.show_sql=true
