--- a/contactbook-data/src/main/resources/hibernate.properties
+++ b/contactbook-data/src/main/resources/hibernate.properties
@@ -1,7 +1,11 @@
 hibernate.connection.driver_class=org.h2.Driver
-hibernate.connection.url=jdbc:h2:file:./data/src/main/resources/contactbook
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=create
-#hibernate.hbm2ddl.auto=update
-#hibernate.hbm2ddl.auto=delete
+hibernate.connection.url=jdbc:h2:file:./contactbook-data/src/main/resources/contactbook
 hibernate.show_sql=true
+hibernate.format_sql=true
+
+# Hibernate Mapping to DDL (Data Definition Language)
+# Uncomment 'create' to create the schema again
+# Use 'update' normally
+#hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
