--- a/contactbook-data/src/main/resources/hibernate.properties
+++ b/contactbook-data/src/main/resources/hibernate.properties
@@ -1,6 +1,6 @@
 hibernate.connection.driver_class=org.h2.Driver
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.connection.url=jdbc:h2:file:./contactbook-data/src/main/resources/contactbook
+hibernate.connection.url=jdbc:h2:file:{path}
 hibernate.show_sql=true
 hibernate.format_sql=true
 
